# more_tech_4_back

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  req.txt
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 0649be7e6851_init.py  1955a2c4043e_add_quest.py  2022_10_09_0245-ea953034b953_init.py  331372466eb8_null_keys.py  401a9a53b7b6_change_type.py  9d48dd4dd068_fix_table.py  d60e3a831a20_user.py  df1bf7f081cf_unique_username.py
src/: config.py  main.py
src/api/: main.py  router.py
src/api/v1/: hellow_world.py  user.py
src/api/v1/router/: marketplace.py  user.py
src/common/: db.py  http_client.py  repository.py  schema.py  utils.py
src/common/exceptions/: base.py
src/containers/: container.py  gateways.py  repos.py  use_cases.py
src/core/: config.py  init_application.py
src/data/db/: db.py
src/data/models/: __init__.py  event.py  user.py  user_event.py
src/data/models/inventory/: achieve.py  admin_item.py  inventory.py  quest.py
src/data/models/marketplace/: admin_item.py  event.py
src/data/models/nft_item/: nft_service_item.py  nft_user_item.py
src/data/models/user/: event.py  user.py  (+1 more)
src/data/repos/: base.py  event.py  transaction.py  user.py
src/db/: db_service.py
src/domain/: user.py
src/domain/base/: base_use_case.py
src/domain/exceptions/: polygon.py
src/domain/transaction/: check_status.py  dto.py
src/domain/user/: use_cases.py
src/models/: event.py  user.py
src/worker/: commands.py
(+16 files in other folders)
