[tool.poetry]
name = "backend"
version = "0.0.0"
description = ""
authors = []
[tool.poetry.dev-dependencies]
rich = "^12.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
   "tests"
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning"
]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "~3.10"

alembic = "~1.8.1"
anyio = "~3.5.0"
asgiref = "~3.5.2"
async-timeout = "~4.0.2"
asyncpg = "~0.25.0"
certifi = "~2022.9.24"
click = "~7.1.2"
dependency-injector = "~4.40.0"
Deprecated = "~1.2.13"
fastapi = "~0.75.2"
greenlet = "~1.1.3"
h11 = "~0.12.0"
httpcore = "~0.15.0"
httpx = "~0.23.0"
idna = "~3.3"
loguru = "~0.5.3"
Mako = "~1.2.3"
MarkupSafe = "~2.1.1"
numpy = "~1.22.3"
packaging = "~21.3"
pydantic = "~1.9.0"
pyparsing = "~3.0.8"
python-dateutil = "~2.8.2"
python-dotenv = "~0.16.0"
six = "~1.16.0"
sniffio = "~1.2.0"
SQLAlchemy = "~1.4.41"
sqlalchemy2-stubs = "~0.0.2a27"
sqlmodel = "~0.0.6"
starlette = "~0.17.1"
typing_extensions = "~4.2.0"
uvicorn = "~0.15.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
bcrypt = "^4.0.0"
typer = "^0.6.1"





